--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <table>
         <caption><b>Albums</b></caption>
        <tr>
-        <td><a href="html/taylor.html"><img src="images/taylor.png" alt=""></a></td>
-        <td><a href="html/bts.html"><img src="images/bts.png" alt=""></a></td>
+        <td><a href="git-upload/taylor.html"><img src="images/taylor.png" alt=""></a></td>
+        <td><a href="git-upload/bts.html"><img src="images/bts.png" alt=""></a></td>
        </tr>
        <tr>
-        <td><a href="html/megham.html"><img src="images/meghan.png" alt=""></a></td>
-        <td><a href="html/onedirection.html"><img src="images/oned.png" alt=""></a></td>
+        <td><a href="git-upload/megham.html"><img src="images/meghan.png" alt=""></a></td>
+        <td><a href="git-upload/onedirection.html"><img src="images/oned.png" alt=""></a></td>
        </tr>
        
         
