--- a/git-upload/bts.html
+++ b/git-upload/bts.html
@@ -26,7 +26,7 @@
     <i>Assistant Director:Jihye Yoon</i>
 <br> 
 <br>
-    <audio  controls ><source src="/audio/dynamite.mp3"></audio><br>
+    <audio  controls ><source src="Multimedia/audio/dynamite.mp3"></audio><br>
     <audio controls ><source src="/audio/butter.mp3"></audio><br>
     <audio  controls ><source src="/audio/runbts.mp3" ></audio><br>
      
