--- a/git-upload/megham.html
+++ b/git-upload/megham.html
@@ -18,7 +18,7 @@
     <br><br>
    
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7h01pssoGUY?si=R_QeJLBJl_P-AL88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <video src="/video/meganp.mp4" controls autoplay></video>
+    <video src="../video/meganp.mp4" controls autoplay></video>
     <br>
     <b>Credits:</b><br>
     <i>Singer:Megan Trainor</i><br>
@@ -26,9 +26,9 @@
     <i>Assistant Director: Kristy</i>
 <br> 
 <br>
-    <audio  controls><source src="/audio/I Wanna Thank Me.mp3"></audio><br>
-    <audio controls ><source src="/audio/Me Too.mp3"></audio><br>
-    <audio  controls ><source src="/audio/Dear Future Husband.mp3" ></audio><br></p>
+    <audio  controls><source src="../audio/I Wanna Thank Me.mp3"></audio><br>
+    <audio controls ><source src="../audio/Me Too.mp3"></audio><br>
+    <audio  controls ><source src="../audio/Dear Future Husband.mp3" ></audio><br></p>
      
    
 </body>
