--- a/git-upload/onedirection.html
+++ b/git-upload/onedirection.html
@@ -17,7 +17,7 @@
     <br><br>
     
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4bzuMm0VN2o?si=pYhquluM3CYOZ1Rp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <video src="/video/onedper.mp4" controls autoplay ></video>
+    <video src="../video/onedper.mp4" controls autoplay ></video>
     <br><br>
     <b>Credits:</b><br>
     <i>Singers: One Direction</i><br>
@@ -25,9 +25,9 @@
     <i>Assistant Director:Micheal Robinson</i>
 <br> 
 <br>
-    <audio  controls><source src="/audio/What Makes You Beautiful.mp3"></audio><br>
-    <audio controls ><source src="/audio/One Direction.mp3"></audio><br>
-    <audio  controls ><source src="/audio/Night Changes.mp3" ></audio><br>
+    <audio  controls><source src="../audio/What Makes You Beautiful.mp3"></audio><br>
+    <audio controls ><source src="../audio/One Direction.mp3"></audio><br>
+    <audio  controls ><source src="../audio/Night Changes.mp3" ></audio><br>
 
     
 </p>
